# DIE-sort

./: .gitignore  .gitmodules  CMakeLists.txt  DIE_sort_source.pro  README.md  build_win32.bat  global.h
.github/workflows/: builder.yml
build_libs/: build_libs.pro
gui_source/: dialogscanprogress.cpp  dialogscanprogress.h  dialogscanprogress.ui  gui_source.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  scanprogress.cpp  scanprogress.h
packaging/windows/: build_portable_windows.cmd
res/: license.txt  readme.txt
res/linux/: die-sort.desktop.in
res/windows/: resource_icon.rc.in
src/: CMakeLists.txt  global.h
src/gui/: CMakeLists.txt  dialogscanprogress.ui  guimainwindow.h  main_gui.cpp
translations/: die-sort_ar_AR.ts  die-sort_bn_BN.ts  die-sort_de_DE.ts  die-sort_es_ES.ts  die-sort_fa_FA.ts  die-sort_fr_FR.ts  die-sort_he_IL.ts  die-sort_id_ID.ts  die-sort_it_IT.ts  die-sort_ja_JP.ts  die-sort_ko_KR.ts  die-sort_pl_PL.ts  die-sort_pt_BR.ts  die-sort_pt_PT.ts  die-sort_ru_RU.ts  die-sort_sv_SE.ts  die-sort_tr_TR.ts  die-sort_uk_UA.ts  die-sort_vi_VN.ts  die-sort_zh_CN.ts  die-sort_zh_TW.ts
winloader_source/: winloader.cpp
